syntax = "proto3";
import "google/protobuf/any.proto";

option optimize_for = CODE_SIZE;

message RouteMessageWrapper {
  string sourceId = 1;
  string nonce = 2;
  string destinationId = 3;
  oneof message {
    google.protobuf.Any closestPeersRequest = 4;
    google.protobuf.Any closestPeersResponse = 5;
    google.protobuf.Any rtcOffer = 6;
    google.protobuf.Any rtcAnswer = 7;
    google.protobuf.Any iceCandidate = 8;
    google.protobuf.Any iceDescription = 9;
  }
}
